2021-05-08  Pedro Alves  <pedro@palves.net>

	* common.m4 (personality test): Remove.

2020-10-31  Simon Marchi  <simon.marchi@polymtl.ca>

	* common-debug.cc (debug_prefixed_printf): New.
	* common-debug.h (debug_prefixed_printf): New declaration.
	* event-loop.cc (event_loop_debug_printf_1): Remove.
	* event-loop.h (event_loop_debug_printf_1): Remove.
	(event_loop_debug_printf): Use debug_prefixed_printf.
	(event_loop_ui_debug_printf): Use debug_prefixed_printf.

2020-10-02  Simon Marchi  <simon.marchi@polymtl.ca>

	* event-loop.h (debug_event_loop): New variable declaration.
	(event_loop_debug_printf_1): New function declaration.
	(event_loop_debug_printf): New macro.
	* event-loop.cc (debug_event_loop): New variable.
	(handle_file_event): Add debug print.
	(event_loop_debug_printf_1): New function.

2020-10-02  Simon Marchi  <simon.marchi@polymtl.ca>

	* common-debug.cc (debug_prefixed_vprintf): Move here.
	* common-debug.h (debug_prefixed_vprintf): Move here.

2020-10-02  Simon Marchi  <simon.marchi@polymtl.ca>

	* event-loop.h (add_file_handler): Add "name" parameter.
	* event-loop.cc (struct file_handler) <name>: New field.
	(create_file_handler): Add "name" parameter, assign it to file
	handler.
	(add_file_handler): Add "name" parameter.

2020-09-24  Simon Marchi  <simon.marchi@efficios.com>

	* event-loop.c (struct file_handler): Remove typedef, re-format.

2020-09-10  Kamil Rytarowski  <n54@gmx.com>

	* eintr.h: New file.

2020-08-13  Simon Marchi  <simon.marchi@polymtl.ca>

	* selftest.h (run_tests): Change parameter to array_view.
	* selftest.c (run_tests): Change parameter to array_view and use
	it.

2020-07-30  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* Makefile.am (AM_CPPFLAGS): Add LARGEFILE_CPPFLAGS.
	* common.m4 (GDB_AC_COMMON): Use BFD_SYS_PROCFS_H to check for
	<sys/procfs.h>.
	* Makefile.in: Regenerate.
	* configure, config.in: Regenerate.

2020-07-28  Tom de Vries  <tdevries@suse.de>

	PR build/26281