@@ -1,3 +1,9 @@
+2021-05-08  Simon Marchi  <simon.marchi@polymtl.ca>
+
+	* Makefile.in: Re-generate.
+	* config.in: Re-generate.
+	* configure: Re-generate.
+
 2021-05-08  Pedro Alves  <pedro@palves.net>
 
 	* common.m4 (personality test): Remove.
